# mono-search

./: .dockerignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: rust-ci.yml  rust-deploy.yml  rust-release.yml  updates.yml
mono_search/: Cargo.toml
src/: main.rs
